@@ -1,0 +1,87 @@
+#! @PERL_PATH@ -w
+# @configure_input@
+# make_register.pl is automatically generated from make_register.pl.in
+# *** Do not edit the generated file ***
+#
+# stemtest.pl.in - automatic test of the stemming functions.
+#
+# ----START-LICENCE----
+# Copyright 1999,2000 BrightStation PLC
+#
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License as
+# published by the Free Software Foundation; either version 2 of the
+# License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+# USA
+# -----END-LICENCE-----
+
+use strict;
+
+print <<EOF;
+/* do_register.cc was automatically generated from $0 */
+/* do_registration.cc: A function to register all the built-in core nodes
+ *                     with an index builder.
+ *
+ * ----START-LICENCE----
+ * Copyright 1999,2000 BrightStation PLC
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+ * USA
+ * -----END-LICENCE-----
+ */
+#include "indexergraph.h"
+
+EOF
+
+if (!defined($ENV{"srcdir"})) {
+    die '$srcdir is not set!';
+}
+
+chdir($ENV{"srcdir"});
+
+my @nodes = ();
+
+# loop over input files
+while (<>) {
+    if ($_ =~ /NODE_BEGIN\(([^,)]+),[ \t*]([^,)]+)\)/) {
+    	my $nodename = $2;
+	push @nodes, $nodename;
+    }
+}
+my $nodename;
+
+foreach $nodename (@nodes) {
+    print "void do_register_$nodename(OmIndexerBuilder &);\n";
+}
+print <<EOHEAD;
+void register_core_nodes(OmIndexerBuilder &builder) {
+EOHEAD
+
+foreach $nodename (@nodes) {
+    print "\tdo_register_$nodename(builder);\n";
+}
+
+print <<EOG;
+}
+EOG
